--- a/vol1.html
+++ b/vol1.html
@@ -146,7 +146,7 @@
 
       <!-- formulas etc unchanged -->
     
-      <h3>1) Time-Series Momentum (TSMOM)</h3>
+      <h3>1) Time-Series Momentum</h3>
       <p>Directional momentum signal over lookback <em>L</em> (price or log-return form):</p>
       <div class="formula">$$ m_t = \operatorname{sign}\big(R_{t,L}\big),\quad R_{t,L} = \sum_{j=1}^{L} r_{t-j} \quad \text{or} \quad m_t = P_t - P_{t-L} $$</div>
       <p>Scaled position with risk targeting (volatility $ \hat{\sigma}_t $):</p>
