--- a/vol.html
+++ b/vol.html
@@ -243,7 +243,7 @@
     <section id="reference">
       <h2>Reference</h2>
       <p>Model defaults via Merton; 
-        <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEvUmTxqk-R4w/profile-treasury-document-pdf-analyzed/B4DZXWUkKyG8Ag-/0/1743057472138?e=1756339200&v=beta&t=hxxKoAldryOCOMC7gqJdbhqV2l3Aw2ijwPGfmQ-7poE" target="_blank">CDS Pricing</a>.
+        <a href="https://1drv.ms/b/c/AB3DB1FAEF5A2894/EYITMvGxq1lHqkkibrjVxVQBKVxjjZacGBirfVOeng0hUw" target="_blank">CDS Pricing</a>.
       </p>
     </section>
 
