--- a/vol.html
+++ b/vol.html
@@ -126,10 +126,10 @@
         <a class="has-submenu"><i class="fas fa-book-open"></i> Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
         <ul class="submenu">
           <li><a href="blog.html"><i class="fas fa-pen"></i> Blog</a></li>
-          <li><a href="conference.html"><i class="fas fa-users"></i> Conference</a></li>
-          <li><a href="lectures.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
-          <li><a href="reading.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
-          <li><a href="systems.html"><i class="fas fa-network-wired"></i> System Design</a></li>
+          <li><a href="blog.html"><i class="fas fa-users"></i> Conference</a></li>
+          <li><a href="blog.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
+          <li><a href="blog.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
+          <li><a href="blog.html"><i class="fas fa-network-wired"></i> System Design</a></li>
         </ul>
       </li>
     </ul>
