--- a/publications.html
+++ b/publications.html
@@ -357,6 +357,15 @@
 
 <div class="publication"><h3><a href="https://www.oreilly.com/library/view/python-algorithmic-trading/9781838989354/5a031893-2066-4458-bede-d8c1e6f3c40b.xhtml" target="_blank">📘 Python Algorithmic Trading Cookbook</h3><p><strong>Publisher:</strong> Packt Publishing Ltd<br><strong>Year:</strong> 2020</p></div></a>
 
+
+<div class="publication"><h3><a href="https://www.oreilly.com/library/view/python-algorithmic-trading/9781838989354/5a031893-2066-4458-bede-d8c1e6f3c40b.xhtml" target="_blank">📘 Python Algorithmic Trading Cookbook</h3><p><strong>Publisher:</strong> Packt Publishing Ltd<br><strong>Year:</strong> 2020</p></div></a>
+
+<div class="publication"><h3><a href=" https://arxiv.org/abs/2511.02593" target="_blank"> A Large Language Model for Corporate Credit Scoring</h3><p><strong>Publisher:</strong>arXiv<br><strong>Year:</strong> 2025</p></div></a>
+<div class="publication"><h3><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5783323" target="_blank"> A Structural Approach to Pricing Credit Default Swaps</h3><p><strong>Publisher:</strong>SSRN<br><strong>Year:</strong> 2025</p></div></a>
+
+<div class="publication"><h3><a href="" target="_blank"> 
+AI-Driven CVA and Market Risk Modelling: A Hybrid Deep Learning Framework for Pricing, Exposure Simulation, and Stress Testing</h3><p><strong>Publisher:</strong>Accepted for publication in the Proceedings of the Odisha AI Symposium (OAIS) 2025. <br><strong>Year:</strong> 2025</p></div></a>
+
   
   </main>
 
